--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodbUrl=mongodb+srv://jagtapkishor104:Kishor@104@cluster0.jh8ujo0.mongodb.net/?retryWrites=true&w=majority
+# mongodbUrl=mongodb://localhost:27017/BackApi
