--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 # mongodbUrl=mongodb://localhost:27017/BackApi
+mongodbUrl=mongodb+srv://jagtapkishor104:Kishor%40104@cluster0.jh8ujo0.mongodb.net/?retryWrites=true&w=majority
