--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # mongodbUrl=mongodb://localhost:27017/BackApi
-mongodbUrl=mongodb+srv://jagtapkishor104:Kishor%40104@cluster0.jh8ujo0.mongodb.net/?retryWrites=true&w=majority
+mongodbUrl=mongodb+srv://jagtapkishor104:Kishor104@cluster0.ilpogjh.mongodb.net/BackApi?retryWrites=true&w=majority
