--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "dev":"nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "mongoose": "^6.6.5",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
